--- a/404.html
+++ b/404.html
@@ -83,7 +83,11 @@
    --><!--
      --><li><a href="/archives/">Writing</a></li><!--
    --><!--
-     --><li><a target="_blank" rel="noopener" href="http://github.com/probberechts">Projects</a></li><!--
+     --><li><a href="/tags/">tags</a></li><!--
+   --><!--
+     --><li><a href="/categories/">categories</a></li><!--
+   --><!--
+     --><li><a href="/search/">Search</a></li><!--
    -->
     </ul>
   </div>
@@ -106,7 +110,7 @@
     Copyright &copy;
     
     
-    2016-2023
+    2023
     Leon Hsi
   </div>
   <div class="footer-right">
@@ -119,7 +123,11 @@
      --><!--
        --><li><a href="/archives/">Writing</a></li><!--
      --><!--
-       --><li><a target="_blank" rel="noopener" href="http://github.com/probberechts">Projects</a></li><!--
+       --><li><a href="/tags/">tags</a></li><!--
+     --><!--
+       --><li><a href="/categories/">categories</a></li><!--
+     --><!--
+       --><li><a href="/search/">Search</a></li><!--
      -->
       </ul>
     </nav>
